# UFSC

./: README.md
EEL5105/: README.md
EEL5105/Ex 2/: circuito_multi .mpf  circuito_multi.vhd  decod.vhd  decod_C2.vhd  mux2_1.vhd  mux4_1.vhd  usertop.vhd  usertop_otimizado.vhd
EEL5105/Ex 3/: README.md  decod7seg.vhd  exec3-lab.xlsx  registrador_D.vhd  usertop (2).vhd  usertop.vhd
EEL5105/Ex 4/: Datapath.vhd  MachineManager.vhd  MachineManager2.vhd  controle.vhd  decod.vhd  div_freq.vhd
EEL5105/Jogo das sequencias/: README.md
EEL5105/Projeto Final/: Counter_round.vhd  Div_Freq.vhd  Div_Freq_DE2.vhd  Mux2_1x16.vhd  Mux2_1x8.vhd  Reg2b.vhd  Somador.vhd  projeto_final.qpf  usertop.vhd
INE5202/EXERCICIOS/: README.md  requirements.txt
INE5202/EXERCICIOS/Lista de Exercicios/Parte 5/: pyproject.toml  tarefa _5.ipynb  tarefa_5.md
INE5202/EXERCICIOS/Lista de Exercicios/Parte 5/.ipynb_checkpoints/: tarefa _5-checkpoint.ipynb
INE5202/RESUMOS DE AULAS/: eliminacao_de_gauss.md  localizacao_de_raizes.md  metodo_bissecao.md  metodo_das_secantes.md  metodo_de_newton.md  metodo_falsa_posicao.md  pivotamento.md  sistemas_lineares.md
INE5402/: README.md
INE5402/Iniciante - beecrowd /: 1005.py  1006.py  1008.py  1015.py  1017.py  1020.py  1805.py  2374.py  2395.py  2413.py  3039.py  3047.py  3147.py
INE5402/Projeto_final/: README.md
INE5404/: README.md
INE5405/TAREFA 1/: pyproject.toml
INE5405/TAREFA 1/dados/: amostra_gasolina_aditivada.csv  probabilidade.csv
INE5405/TAREFA 1/probabilidade/: main.py
INE5406/: README.md
INE5605/: README.md
(+351 files in other folders)
